--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "sanitize-html": "^2.5.3"
+    "sanitize-html": "^2.5.3",
+    "uuid": "^9.0.0"
   }
 }
