--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "express-mongo-sanitize": "^2.1.0",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
+    "jest": "^29.3.1",
     "joi": "^17.4.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.13",
@@ -29,6 +30,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
     "sanitize-html": "^2.5.3",
+    "supertest": "^6.3.1",
     "uuid": "^9.0.0"
   }
 }
