--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "body-parser": "^1.20.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^10.0.0",
@@ -24,12 +25,14 @@
     "jest": "^29.3.1",
     "joi": "^17.4.2",
     "method-override": "^3.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
     "sanitize-html": "^2.5.3",
+    "stripe": "^11.1.0",
     "supertest": "^6.3.1",
     "uuid": "^9.0.0"
   }
