--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.2",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
