--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "chart.js": "^4.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "dotenv": "^10.0.0",
@@ -24,6 +26,7 @@
     "helmet": "^4.6.0",
     "jest": "^29.3.1",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.0.13",
@@ -32,6 +35,7 @@
     "nodemon": "^3.0.2",
     "openai": "^4.40.2",
     "passport": "^0.5.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
     "sanitize-html": "^2.5.3",
