--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^29.3.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.0.13",
