--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "bull": "^4.16.5",
     "chart.js": "^4.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
@@ -29,10 +30,12 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "mammoth": "^1.8.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.2",
     "openai": "^4.40.2",
@@ -40,9 +43,11 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
+    "pdf-parse": "^1.1.1",
     "sanitize-html": "^2.5.3",
     "stripe": "^11.1.0",
     "supertest": "^6.3.1",
+    "textract": "^2.5.0",
     "uuid": "^9.0.0"
   }
 }
