--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
+    "expo-server-sdk": "^3.13.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-session": "^1.17.2",
