--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemon": "^3.0.2",
     "openai": "^4.40.2",
     "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
