--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-session": "^1.17.2",
+    "google-auth-library": "^9.15.0",
     "helmet": "^4.6.0",
     "jest": "^29.3.1",
     "joi": "^17.4.2",
