--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pravnicime",
+  "name": "edookio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -35,6 +35,7 @@
     "mammoth": "^1.8.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
+    "mongodb": "^6.12.0",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
