--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
     "google-auth-library": "^9.15.0",
     "helmet": "^4.6.0",
     "jest": "^29.3.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "jwt-decode": "^4.0.0",
     "mammoth": "^1.8.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
