--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "@sentry/node": "^8.54.0",
+    "@sentry/profiling-node": "^8.54.0",
+    "@sentry/tracing": "^7.120.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "bull": "^4.16.5",
