--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-cron": "^3.0.3",
     "nodemon": "^3.0.2",
     "openai": "^4.40.2",
+    "parse5": "^7.2.1",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
